--- a/config/webservices.yml
+++ b/config/webservices.yml
@@ -5,6 +5,9 @@ development:
   topic_bidding_webservice_url: 'http://peerlogic.csc.ncsu.edu/intelligent_assignment/merge_teams'
   heatmap_webservice_url: 'http://peerlogic.csc.ncsu.edu/reviewsentiment/configure'
   sentiment_webservice_url: 'http://peerlogic.csc.ncsu.edu/sentiment/'
+  problem_webservice_url: 'http://peerlogic.csc.ncsu.edu/problem/'
+  suggestions_webservice_url: 'http://peerlogic.csc.ncsu.edu/suggestions/'
+  emotions_webservice_url: 'http://peerlogic.csc.ncsu.edu/emotions/'
 
 test:
   metareview_webservice_url: 'http://peerlogic.csc.ncsu.edu/metareview/metareviewgenerator/'
@@ -13,8 +16,9 @@ test:
   topic_bidding_webservice_url: 'http://peerlogic.csc.ncsu.edu/intelligent_assignment/merge_teams'
   heatmap_webservice_url: 'http://peerlogic.csc.ncsu.edu/reviewsentiment/configure'
   sentiment_webservice_url: 'http://peerlogic.csc.ncsu.edu/sentiment/'
-
-
+  problem_webservice_url: 'http://peerlogic.csc.ncsu.edu/problem/'
+  suggestions_webservice_url: 'http://peerlogic.csc.ncsu.edu/suggestions/'
+  emotions_webservice_url: 'http://peerlogic.csc.ncsu.edu/emotions/'
 
 production:
   metareview_webservice_url: 'http://peerlogic.csc.ncsu.edu/metareview/metareviewgenerator/'
@@ -23,3 +27,6 @@ production:
   topic_bidding_webservice_url: 'http://peerlogic.csc.ncsu.edu/intelligent_assignment/merge_teams'
   heatmap_webservice_url: 'http://peerlogic.csc.ncsu.edu/reviewsentiment/configure'
   sentiment_webservice_url: 'http://peerlogic.csc.ncsu.edu/sentiment/'
+  problem_webservice_url: 'http://peerlogic.csc.ncsu.edu/problem/'
+  suggestions_webservice_url: 'http://peerlogic.csc.ncsu.edu/suggestions/'
+  emotions_webservice_url: 'http://peerlogic.csc.ncsu.edu/emotions/'
